--- a/package.json
+++ b/package.json
@@ -1,85 +1,86 @@
 {
-  "name": "fuse",
-  "version": "8.0.0",
-  "license": "https://themeforest.net/licenses/terms/regular",
-  "scripts": {
-      "ng": "ng",
-      "start": "ng serve --open",
-      "start-hmr": "ng serve --configuration hmr --source-map=false --hmr-warning=false",
-      "start-hmr-sourcemaps": "ng serve --configuration hmr --source-map=true --hmr-warning=false",
-      "build": "node --max_old_space_size=6144 ./node_modules/@angular/cli/bin/ng build --dev",
-      "build-stats": "node --max_old_space_size=6144 ./node_modules/@angular/cli/bin/ng build --dev --stats-json",
-      "build-prod": "node --max_old_space_size=6144 ./node_modules/@angular/cli/bin/ng build --prod",
-      "build-prod-stats": "node --max_old_space_size=6144 ./node_modules/@angular/cli/bin/ng build --prod --stats-json",
-      "test": "ng test",
-      "lint": "ng lint",
-      "e2e": "ng e2e",
-      "bundle-report": "webpack-bundle-analyzer dist/stats.json"
-  },
-  "private": true,
-  "dependencies": {
-      "@angular/animations": "11.2.4",
-      "@angular/cdk": "10.2.7",
-      "@angular/common": "11.2.4",
-      "@angular/compiler": "11.2.4",
-      "@angular/core": "11.2.4",
-      "@angular/flex-layout": "10.0.0-beta.32",
-      "@angular/forms": "11.2.4",
-      "@angular/material": "10.2.7",
-      "@angular/material-moment-adapter": "10.2.7",
-      "@angular/platform-browser": "11.2.4",
-      "@angular/platform-browser-dynamic": "11.2.4",
-      "@angular/router": "11.2.4",
-      "@auth0/angular-jwt": "5.0.1",
-      "@ngx-translate/core": "11.0.1",
-      "@syncfusion/ej2-angular-navigations": "19.2.46",
-      "@types/prismjs": "1.16.0",
-      "angular-calendar": "0.27.8",
-      "angular-in-memory-web-api": "0.11.0",
-      "chart.js": "2.9.4",
-      "classlist.js": "1.1.20150312",
-      "docx": "6.0.3",
-      "exceljs": "4.2.1",
-      "exif-js": "2.3.0",
-      "file-saver": "2.0.5",
-      "gojs": "2.1.53",
-      "gojs-angular": "2.0.4",
-      "lodash": "4.17.21",
-      "ng-pick-datetime": "7.0.0",
-      "ngx-cookie-service": "2.2.0",
-      "ngx-doc-viewer": "^2.0.5",
-      "ngx-extended-pdf-viewer": "10.5.0",
-      "ngx-mat-select-search": "3.3.0",
-      "ngx-spinner": "11.0.2",
-      "perfect-scrollbar": "1.4.0",
-      "prismjs": "1.23.0",
-      "read-vn-number": "^4.0.1",
-      "rxjs": "6.5.3",
-      "web-animations-js": "^2.3.2",
-      "zone.js": "~0.10.2"
-  },
-  "devDependencies": {
-      "@angular-devkit/build-angular": "~0.1102.3",
-      "@angular/cli": "11.2.3",
-      "@angular/compiler-cli": "11.2.4",
-      "@angular/language-service": "11.2.4",
-      "@angularclass/hmr": "2.1.3",
-      "@types/jasmine": "~3.6.0",
-      "@types/jasminewd2": "2.0.6",
-      "@types/lodash": "4.14.132",
-      "@types/node": "^12.11.1",
-      "codelyzer": "^6.0.0",
-      "jasmine-core": "~3.6.0",
-      "jasmine-spec-reporter": "~5.0.0",
-      "karma": "~6.1.1",
-      "karma-chrome-launcher": "~3.1.0",
-      "karma-coverage-istanbul-reporter": "~3.0.2",
-      "karma-jasmine": "~4.0.0",
-      "karma-jasmine-html-reporter": "^1.5.0",
-      "protractor": "~7.0.0",
-      "ts-node": "7.0.1",
-      "tslint": "~6.1.0",
-      "typescript": "4.1.5",
-      "webpack-bundle-analyzer": "3.3.2"
-  }
+    "name": "fuse",
+    "version": "8.0.0",
+    "license": "https://themeforest.net/licenses/terms/regular",
+    "scripts": {
+        "ng": "ng",
+        "start": "ng serve --open",
+        "start-hmr": "ng serve --configuration hmr --source-map=false --hmr-warning=false",
+        "start-hmr-sourcemaps": "ng serve --configuration hmr --source-map=true --hmr-warning=false",
+        "build": "node --max_old_space_size=6144 ./node_modules/@angular/cli/bin/ng build --dev",
+        "build-stats": "node --max_old_space_size=6144 ./node_modules/@angular/cli/bin/ng build --dev --stats-json",
+        "build-prod": "node --max_old_space_size=6144 ./node_modules/@angular/cli/bin/ng build --prod",
+        "build-prod-stats": "node --max_old_space_size=6144 ./node_modules/@angular/cli/bin/ng build --prod --stats-json",
+        "test": "ng test",
+        "lint": "ng lint",
+        "e2e": "ng e2e",
+        "bundle-report": "webpack-bundle-analyzer dist/stats.json"
+    },
+    "private": true,
+    "dependencies": {
+        "@angular/animations": "11.2.4",
+        "@angular/cdk": "10.2.7",
+        "@angular/common": "11.2.4",
+        "@angular/compiler": "11.2.4",
+        "@angular/core": "11.2.4",
+        "@angular/flex-layout": "10.0.0-beta.32",
+        "@angular/forms": "11.2.4",
+        "@angular/material": "10.2.7",
+        "@angular/material-moment-adapter": "10.2.7",
+        "@angular/platform-browser": "11.2.4",
+        "@angular/platform-browser-dynamic": "11.2.4",
+        "@angular/router": "11.2.4",
+        "@auth0/angular-jwt": "5.0.1",
+        "@ngx-translate/core": "11.0.1",
+        "@syncfusion/ej2-angular-navigations": "19.2.46",
+        "@types/prismjs": "1.16.0",
+        "angular-calendar": "0.27.8",
+        "angular-in-memory-web-api": "0.11.0",
+        "chart.js": "2.9.4",
+        "classlist.js": "1.1.20150312",
+        "docx": "6.0.3",
+        "exceljs": "4.2.1",
+        "exif-js": "2.3.0",
+        "file-saver": "2.0.5",
+        "gojs": "2.1.53",
+        "gojs-angular": "2.0.4",
+        "lodash": "4.17.21",
+        "ng-pick-datetime": "7.0.0",
+        "ngx-cookie-service": "2.2.0",
+        "ngx-doc-viewer": "^2.0.5",
+        "ngx-extended-pdf-viewer": "10.5.0",
+        "ngx-loading": "2.0.1",
+        "ngx-mat-select-search": "3.3.0",
+        "ngx-spinner": "11.0.2",
+        "perfect-scrollbar": "1.4.0",
+        "prismjs": "1.23.0",
+        "read-vn-number": "^4.0.1",
+        "rxjs": "6.5.3",
+        "web-animations-js": "^2.3.2",
+        "zone.js": "~0.10.2"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "~0.1102.3",
+        "@angular/cli": "11.2.3",
+        "@angular/compiler-cli": "11.2.4",
+        "@angular/language-service": "11.2.4",
+        "@angularclass/hmr": "2.1.3",
+        "@types/jasmine": "~3.6.0",
+        "@types/jasminewd2": "2.0.6",
+        "@types/lodash": "4.14.132",
+        "@types/node": "^12.11.1",
+        "codelyzer": "^6.0.0",
+        "jasmine-core": "~3.6.0",
+        "jasmine-spec-reporter": "~5.0.0",
+        "karma": "~6.1.1",
+        "karma-chrome-launcher": "~3.1.0",
+        "karma-coverage-istanbul-reporter": "~3.0.2",
+        "karma-jasmine": "~4.0.0",
+        "karma-jasmine-html-reporter": "^1.5.0",
+        "protractor": "~7.0.0",
+        "ts-node": "7.0.1",
+        "tslint": "~6.1.0",
+        "typescript": "4.1.5",
+        "webpack-bundle-analyzer": "3.3.2"
+    }
 }
